<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarThumbVertical="@null"
    tools:context=".Addcustomerdetailsatreceptionst">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.cardview.widget.CardView
            xmlns:Card_View="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:padding="10dp"
            Card_View:cardCornerRadius="5dp"
            Card_View:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add offline Customer Data"
                android:gravity="center"
                android:textSize="25dp"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="10dp"
                />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/namess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/name"
            android:inputType="textNoSuggestions"
            android:maxLines="1"
            android:paddingStart="5dp"
            android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/emailss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="5dp"
                android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/AddressError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/addressss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/prompt_Address"
                android:inputType="textMultiLine"
                android:paddingStart="5dp"
                android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/phoness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/phone_number"
                android:maxLength="10"
                android:inputType="number"
                android:maxLines="1"
                android:paddingStart="5dp"
                android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/phoneplus"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:gravity="center"
            android:text="+91"
            android:textSize="16sp"
            android:visibility="invisible"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">


            <EditText
                android:id="@+id/dateeditss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="date"
                android:hint="@string/prompt_date"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:id="@+id/dropError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_text">

            <AutoCompleteTextView
                android:id="@+id/filled_exposed_dropdownss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"/>

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/registerss"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/button_gradient"
            android:text="Add Customer"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressbarss"
            android:visibility="invisible"
            />
        </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</ScrollView>